--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "build/index.js",
   "scripts": {
-    "start": "tsc && cd views && tsc && cd .. && echo \"Server is ready to start\" && node build/index.js",
+    "build": "tsc && cd views && tsc && cd .. && echo \"Server is ready to start\"",
+    "start": "node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
